fix test directory

--- a/src/test/Untitled.ipynb
+++ b/src/test/Untitled.ipynb
@@ -2,66 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "94badf6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "531e332e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_birthday(year_i,month_i,day_i):\n",
-    "    today = datetime.date.today()\n",
-    "    date_of_birth = datetime.date(year_i,month_i,day_i)\n",
-    "    birthday = datetime.date(today.year,month_i,day_i)\n",
-    "    result = (birthday - today).days\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "28dffd51",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_birthday(2000,12,20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 5,
    "id": "6b3548e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Today: December 05, 2021\n",
-      "These people were born on your birthday: \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime\n",
     "import pandas as pd\n",
@@ -77,7 +21,7 @@
     "        self.month = month\n",
     "        self.day = day\n",
     "    \n",
-    "    def get_birthday(self):\n",
+    "    def calculate_age_day(self):\n",
     "        today = datetime.date.today()\n",
     "        date_of_birth = datetime.date(self.year,self.month,self.day)\n",
     "        birthday = datetime.date(today.year,self.month,self.day)\n",
@@ -90,7 +34,7 @@
     "            return f\"Dear {self.name} about {365 - abs(result)} days until your birthday!\"\n",
     "        return f\"Dear{self.name} {result} days until your birthday!\"\n",
     "    \n",
-    "    def famous_people(self,df=pd.read_csv(\"./src/data/famous_birthdates_final.csv\")):\n",
+    "    def famous_people(self,df=pd.read_csv(\"../data/famous_birthdates_final.csv\")):\n",
     "    \n",
     "        famous_people_list = []\n",
     "        date = datetime.date(self.year,self.month,self.day)\n",
@@ -118,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 8,
    "id": "8f8ca7a3",
    "metadata": {},
    "outputs": [
@@ -126,182 +70,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Today: December 05, 2021\n"
+      "Today: December 11, 2021\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Dear Sina about 351 days until your birthday!'"
+       "'Dear Sina about 345 days until your birthday!'"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "o = Birthday(\"Sina\",2000,11,21)\n",
-    "o.get_birthday()"
+    "o.calculate_age_day()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "id": "34a1df2a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "These people were born on your birthday: \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['Aikman Troy',\n",
-       " 'Brown Tina',\n",
-       " 'Durbin Richard J',\n",
-       " 'Howe Tina',\n",
-       " 'Jones Cherry',\n",
-       " 'Kanell Danny',\n",
-       " 'Kaufman Moises',\n",
-       " 'Singer Isaac Bashevis',\n",
-       " 'Strahan Michael',\n",
-       " 'Tua David']"
-      ]
-     },
-     "execution_count": 177,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "o.famous_people()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "dcbf2c49",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>name</th>\n",
-       "      <th>birthDate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3205</th>\n",
-       "      <td>3205</td>\n",
-       "      <td>Pullman Philip</td>\n",
-       "      <td>1946-10-19</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Unnamed: 0            name   birthDate\n",
-       "3205        3205  Pullman Philip  1946-10-19"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "df = pd.read_csv(\"../famous_birthdates_final.csv\")\n",
-    "df[df[\"name\"] == \"Pullman Philip\"]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "c293e2c5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def func_1(y,m,d,df):\n",
-    "    \n",
-    "    l = []\n",
-    "    date = datetime.date(y,m,d)\n",
-    "    for item in df['birthDate']:\n",
-    "        if str(date)[5:] == item[5:]:\n",
-    "            l.extend(list(df[df['birthDate'] == item][\"name\"]))\n",
-    "    return l    "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "c643cde0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Aikman Troy',\n",
-       " 'Brown Tina',\n",
-       " 'Durbin Richard J',\n",
-       " 'Howe Tina',\n",
-       " 'Jones Cherry',\n",
-       " 'Kanell Danny',\n",
-       " 'Kaufman Moises',\n",
-       " 'Singer Isaac Bashevis',\n",
-       " 'Strahan Michael',\n",
-       " 'Tua David']"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "func_1(1976,11,21,df)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "3d04850a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# def get_birthday(year_i,month_i,day_i):\n",
-    "#     today = datetime.date.today()\n",
-    "#     date_of_birth = datetime.date(year_i,month_i,day_i)\n",
-    "#     birthday = datetime.date(today.year,month_i,day_i)\n",
-    "#     result = (birthday - today).days\n",
-    "#     return result"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -314,7 +140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -328,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
