fix calculate_age_seconds method

--- a/src/test/Untitled.ipynb
+++ b/src/test/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "6b3548e5",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "    def calculate_age_seconds(birthday):\n",
     "        birthday = str(birthday)\n",
     "        birthday = datetime.datetime.strptime(birthday,\"%m/%d/%Y\")\n",
-    "        result = (Time.today - birthday).total_seconds()\n",
+    "        result = (datetime.datetime.now() - birthday).total_seconds()\n",
     "        return f\"About {result} seconds have passed since you were born!\"\n",
     "    \n",
     "    \n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "8f8ca7a3",
    "metadata": {},
    "outputs": [
@@ -72,30 +72,32 @@
      "text": [
       "Today: December 11, 2021\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "o = Birthday(\"Sina\",2000,11,21)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "34a1df2a",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Dear Sina about 345 days until your birthday!'"
+       "'About 665332979.265101 seconds have passed since you were born!'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "o = Birthday(\"Sina\",2000,11,21)\n",
-    "o.calculate_age_day()"
+    "Birthday.calculate_age_seconds(\"11/11/2000\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34a1df2a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
